Changelog
=========

1.0.3 (unreleased)
------------------

- Properly handle finding/removing multiselection widgets, which are nested in
  dls. 
  See http://dev.plone.org/ticket/12964
  [esteele]


1.0.2 (2012-04-15)
------------------

- Accept an optional 'brains' parameter for the field's get method which
  says to return normal catalog results instead of an IContentListing.
  [davisagli]

- Show currently-selected sort index.
  [esteele]

- Move querywidget widgets into browser views so we're not redefining the 
  same template code in 3 places.
  [esteele]

- Add a relative date widget.
  [esteele]

- Fix errors in widget's dict access in edit template. 
  [esteele]

- Render the "Remove line" via a view instead of creating it in javascript, 
  so that we can localize it.
  Refs http://dev.plone.org/ticket/12377
  [esteele]


1.0.1 (2011-08-25)
------------------

- I18n fixes.
  [vincentfretin]


1.0 - 2011-07-19
----------------

- Initial release.

- Add MANIFEST.in.
  [WouterVH]