@@ -164,10 +164,27 @@
             var querywidget = $(this).parents('.criteria').find('.querywidget');
             querylist.push('query.i:records=' + index);
             querylist.push('query.o:records=' + operator);
+
+            function getDateWidgetValue(obj) {
+                // Get values from the date widget instead of the field itself, as the value 
+                // of the field isn't yet updated at this point in the "change" event.
+                value = (obj.data('dateinput') && obj.data('dateinput').getValue('mm/dd/yyyy')) || '';
+                return value;
+            }
+
             switch (widget) {
+                case 'DateWidget':
+                    value = getDateWidgetValue($(this).parents('.criteria').find('.queryvalue'));
+                    if (value) {
+                        querylist.push('query.v:records=' + value);
+                    }
+                    break;
                 case 'DateRangeWidget':
-                    querylist.push('query.v:records:list=' + $(querywidget.children('input')[0]).val());
-                    querylist.push('query.v:records:list=' + $(querywidget.children('input')[1]).val());
+                    start_date = getDateWidgetValue($(querywidget.children('input')[0]));
+                    end_date = getDateWidgetValue($(querywidget.children('input')[1]));
+
+                    querylist.push('query.v:records:list=' + start_date);
+                    querylist.push('query.v:records:list=' + end_date);
                     break;
                 case 'MultipleSelectionWidget':
                     querywidget.find('input:checked').each(function () {
@@ -175,13 +192,19 @@
                     });
                     break;
                 default:
-                    querylist.push('query.v:records=' + $(this).parents('.criteria').find('.queryvalue').val());
+                    value = $(this).parents('.criteria').find('.queryvalue').val();
+                    push_string = 'query.v:records=';
+                    if (value) {
+                        push_string = push_string + value;
+                    }
+                    querylist.push(push_string);
                     break;
             }
-
-            $.get(portal_url + '/@@querybuildernumberofresults?' + querylist.join('&'),
-                  {},
-                  function (data) { results.html(data); });
+            if (querylist.length){
+                $.get(portal_url + '/@@querybuildernumberofresults?' + querylist.join('&'),
+                      {},
+                      function (data) { results.html(data); });
+            }
         });
         query += querylist.join('&');
         query += '&sort_on=' + $('#sort_on').val();
